fix spacing, add source, fix tooltip positioning

--- a/index.scss
+++ b/index.scss
@@ -13,7 +13,7 @@ svg {
     justify-content: center;
     flex-direction: column;
     width:690px;
-    height:550px;
+    height:600px;
     padding:65px;
     border: solid 1px black;
     h1 {
@@ -36,6 +36,7 @@ body {
 }
 
 #tooltip {
+    position:absolute;
     display:flex;
     justify-content: center;
     width:125px;
@@ -50,7 +51,7 @@ body {
 }
 
 #dataSource {
-    position: absolute;
-    top: 150px;
-    left:280px;
+    position: relative;
+    top: 480px;
+    left:79px;
 }
